--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ pathlib==1.0.1
 Pillow==5.0.0
 tensorflow==2.7.0
 numpy==1.22.1
+$ heroku create --buildpack https://github.com/orchardmile/heroku-buildpack-numpy-scipy.git
