--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,211 @@
-asgiref==3.3.4
-dj-database-url==0.5.0
-Django==3.2.4
-django-heroku==0.3.1
-djangorestframework==3.12.4
-gunicorn==20.1.0
-psycopg2==2.9.1
-pytz==2021.1
-sqlparse==0.4.1
-typing-extensions==3.10.0.0
-whitenoise==5.2.0
-jinja2==3.0.1
-pathlib==1.0.1
-Pillow==5.0.0
-tensorflow==2.7.0
-numpy==1.14.5
+absl-py @ file:///C:/ci/absl-py_1603889282672/work
+alabaster==0.7.12
+anyio @ file:///C:/ci/anyio_1620153135954/work/dist
+appdirs==1.4.4
+argh==0.26.2
+argon2-cffi @ file:///C:/ci/argon2-cffi_1596826740294/work
+arrow==0.13.1
+asgiref==3.4.1
+astor==0.8.1
+astroid @ file:///C:/ci/astroid_1628063237844/work
+astunparse==1.6.3
+async-generator==1.10
+atomicwrites==1.4.0
+attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
+autopep8 @ file:///tmp/build/80754af9/autopep8_1615918855173/work      
+Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+bcrypt @ file:///C:/ci/bcrypt_1597936262193/work
+binaryornot @ file:///tmp/build/80754af9/binaryornot_1617751525010/work
+black==19.10b0
+bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
+blinker==1.4
+brotlipy==0.7.0
+cachetools @ file:///tmp/build/80754af9/cachetools_1596822027882/work
+certifi==2021.5.30
+cffi @ file:///C:/ci/cffi_1605538151928/work
+chardet @ file:///C:/ci/chardet_1605285153095/work
+click==7.1.2
+cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1632508026186/work
+colabcode==0.3.0
+colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work
+contextvars==2.4
+cookiecutter @ file:///tmp/build/80754af9/cookiecutter_1617748928239/work
+cryptography @ file:///C:/ci/cryptography_1605544548630/work
+cycler==0.10.0
+dataclasses @ file:///tmp/build/80754af9/dataclasses_1614363715916/work
+decorator==4.4.2
+defusedxml==0.6.0
+diff-match-patch @ file:///Users/ktietz/demo/mc3/conda-bld/diff-match-patch_1630511840874/work
+Django==3.2.10
+docutils @ file:///C:/ci/docutils_1620828217025/work
+entrypoints==0.3
+flake8 @ file:///tmp/build/80754af9/flake8_1615834841867/work
+future==0.18.2
+gast==0.3.3
+google-auth @ file:///tmp/build/80754af9/google-auth_1600960338579/work
+google-auth-oauthlib @ file:///tmp/build/80754af9/google-auth-oauthlib_1603929124518/work
+google-pasta==0.2.0
+grpcio @ file:///C:/ci/grpcio_1597406495377/work
+h11==0.13.0
+h5py==2.10.0
+httplib2==0.19.0
+idna @ file:///tmp/build/80754af9/idna_1593446292537/work
+imagesize @ file:///tmp/build/80754af9/imagesize_1637939814114/work
+immutables @ file:///C:/ci/immutables_1615841288064/work
+importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
+importlib-resources==5.4.0
+inflection==0.5.1
+intervaltree @ file:///Users/ktietz/demo/mc3/conda-bld/intervaltree_1630511889664/work
+ipykernel @ file:///C:/ci/ipykernel_1596206775157/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///C:/ci/ipython_1593446240034/work
+ipython-genutils==0.2.0
+isort @ file:///tmp/build/80754af9/isort_1628603791788/work
+jedi @ file:///C:/ci/jedi_1596472773465/work
+Jinja2==2.11.2
+jinja2-time @ file:///tmp/build/80754af9/jinja2-time_1617751524098/work
+Js2Py==0.71
+json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
+jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
+jupyter-core @ file:///C:/ci/jupyter_core_1606149071529/work
+jupyter-server @ file:///C:/ci/jupyter_server_1616084123252/work
+jupyterlab==3.0.7
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1628194263495/work
+Keras==2.3.1
+Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
+Keras-Preprocessing==1.1.2
+keyring @ file:///C:/ci/keyring_1614617025616/work
+kiwisolver==1.3.1
+lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529300868/work
+Markdown @ file:///C:/ci/markdown_1605111171606/work
+MarkupSafe==1.1.1
+matplotlib==3.3.4
+mccabe==0.6.1
+mistune==0.8.4
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+mypy-extensions==0.4.3
+mysql-connector==2.2.9
+nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
+nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
+nbconvert @ file:///C:/ci/nbconvert_1601896775581/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1602783287752/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1606153767164/work
+notebook @ file:///C:/ci/notebook_1601498601160/work
+numpy==1.18.5
+numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
+oauthlib==3.1.0
+opencv-python==4.5.1.48
+opt-einsum==3.1.0
+packaging==20.4
+pandocfilters @ file:///C:/ci/pandocfilters_1605120535071/work
+paramiko @ file:///tmp/build/80754af9/paramiko_1598886428689/work
+parso==0.7.0
+pathspec==0.7.0
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare==0.7.5
+Pillow==8.1.0
+pluggy @ file:///C:/ci/pluggy_1633715371909/work
+poyo @ file:///tmp/build/80754af9/poyo_1617751526755/work
+prometheus-client==0.8.0
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
+protobuf==3.13.0
+psutil @ file:///C:/ci/psutil_1612298125479/work
+psycopg2==2.9.2
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1621600989141/work
+pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
+pygame==2.1.2
+Pygments @ file:///tmp/build/80754af9/pygments_1604103097372/work
+pyjsparser==2.7.1
+PyJWT==1.7.1
+pylint @ file:///C:/ci/pylint_1627536908981/work
+pyls-black @ file:///tmp/build/80754af9/pyls-black_1607553132291/work
+pyls-spyder @ file:///tmp/build/80754af9/pyls-spyder_1613849700860/work
+PyNaCl @ file:///C:/ci/pynacl_1595009245871/work
+pyngrok==5.1.0
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1605545627475/work
+pyparsing==2.4.7
+pyreadline==2.1
+pyrsistent @ file:///C:/ci/pyrsistent_1600141799440/work
+PySocks @ file:///C:/ci/pysocks_1605305839978/work
+python-dateutil==2.8.1
+python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
+python-language-server @ file:///tmp/build/80754af9/python-language-server_1607972495879/work
+python-slugify @ file:///tmp/build/80754af9/python-slugify_1620405669636/work
+pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pytz-deprecation-shim==0.1.0.post0
+pywin32==227
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.2
+QDarkStyle @ file:///tmp/build/80754af9/qdarkstyle_1617386714626/work
+qstylizer @ file:///tmp/build/80754af9/qstylizer_1617713584600/work/dist/qstylizer-0.1.10-py2.py3-none-any.whl
+QtAwesome @ file:///tmp/build/80754af9/qtawesome_1637160816833/work
+qtconsole @ file:///tmp/build/80754af9/qtconsole_1632739723211/work
+QtPy @ file:///tmp/build/80754af9/qtpy_1629397026935/work
+regex @ file:///C:/ci/regex_1629302333945/work
+requests @ file:///tmp/build/80754af9/requests_1592841827918/work
+requests-oauthlib==1.3.0
+rope @ file:///tmp/build/80754af9/rope_1636994440010/work
+rsa @ file:///tmp/build/80754af9/rsa_1596998415516/work
+Rtree @ file:///C:/ci/rtree_1618421017076/work
+scipy @ file:///C:/ci/scipy_1597675683670/work
+Send2Trash==1.5.0
+sinchsms==1.0.4
+six @ file:///C:/ci/six_1605187303045/work
+sniffio @ file:///C:/ci/sniffio_1614030717740/work
+snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1637937080595/work
+sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1623949099177/work
+Sphinx==4.2.0
+sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
+sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
+sphinxcontrib-htmlhelp @ file:///tmp/build/80754af9/sphinxcontrib-htmlhelp_1623945626792/work
+sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
+sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
+sphinxcontrib-serializinghtml @ file:///tmp/build/80754af9/sphinxcontrib-serializinghtml_1624451540180/work
+spyder @ file:///C:/ci/spyder_1626182187988/work
+spyder-kernels @ file:///C:/ci/spyder-kernels_1625671143071/work
+sqlparse==0.4.2
+tensorboard @ file:///home/builder/ktietz/conda/conda-bld/tensorboard_1604313476433/work/tmp_pip_dir
+tensorboard-plugin-wit==1.6.0
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+text-unidecode @ file:///Users/ktietz/demo/mc3/conda-bld/text-unidecode_1629401354553/work
+textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
+textmagic==2.0.3
+three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
+tinycss @ file:///tmp/build/80754af9/tinycss_1617713798712/work
+toml @ file:///tmp/build/80754af9/toml_1616166611790/work
+tornado @ file:///C:/ci/tornado_1606942379977/work
+traitlets==4.3.3
+typed-ast @ file:///C:/ci/typed-ast_1624953776872/work
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1624965014186/work
+tzdata==2021.5
+tzlocal==4.1
+ujson @ file:///C:/ci/ujson_1611259572767/work
+Unidecode @ file:///tmp/build/80754af9/unidecode_1614712377438/work
+urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
+uvicorn==0.13.1
+watchdog @ file:///C:/ci/watchdog_1624955117728/work
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+webencodings==0.5.1
+Werkzeug==0.16.1
+whichcraft @ file:///tmp/build/80754af9/whichcraft_1617751293875/work
+win-inet-pton @ file:///C:/ci/win_inet_pton_1605306197271/work
+wincertstore==0.2
+wrapt==1.12.1
+yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
+zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
