--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,17 @@
-alabaster==0.7.12
-appdirs==1.4.4
-argh==0.26.2
-arrow==0.13.1
 asgiref==3.4.1
-astor==0.8.1
-astunparse==1.6.3
-async-generator==1.10
-atomicwrites==1.4.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-black==19.10b0
-blinker==1.4
-brotlipy==0.7.0
-certifi==2021.5.30
-click==7.1.2
-colabcode==0.3.0
-contextvars==2.4
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.2.10
-entrypoints==0.3
-future==0.18.2
-gast==0.3.3
-google-pasta==0.2.0
-h11==0.13.0
-h5py==2.10.0
-httplib2==0.19.0
-importlib-resources==5.4.0
-inflection==0.5.1
-ipython-genutils==0.2.0
-Jinja2==2.11.2
-Js2Py==0.71
-jupyterlab==3.0.7
-Keras==2.3.1
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-MarkupSafe==1.1.1
-matplotlib==3.3.4
-mccabe==0.6.1
-mistune==0.8.4
-mkl-fft==1.0.6
-mkl-random==1.0.1.1
-
-mypy-extensions==0.4.3
-mysql-connector==2.2.9
-numpy==1.18.5
-oauthlib==3.1.0
-opencv-python==4.5.1.48
-opt-einsum==3.1.0
-packaging==20.4
-parso==0.7.0
-pathspec==0.7.0
-pickleshare==0.7.5
-Pillow==8.1.0
-prometheus-client==0.8.0
-protobuf==3.13.0
+django-heroku==0.3.1
+djangorestframework==3.12.4
+gunicorn==20.1.0
 psycopg2==2.9.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pygame==2.1.2
-pyjsparser==2.7.1
-PyJWT==1.7.1
-pyngrok==5.1.0
-pyparsing==2.4.7
-pyreadline==2.1
-python-dateutil==2.8.1
-pytz-deprecation-shim==0.1.0.post0
-
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==19.0.2
-Send2Trash==1.5.0
-sinchsms==1.0.4
-Sphinx==4.2.0
+pytz==2021.1
 sqlparse==0.4.2
-tensorboard-plugin-wit==1.8.1
+typing-extensions==3.10.0.0
+whitenoise==5.2.0
+jinja2==2.11.2
+pathlib==1.0.1
+Pillow==8.1.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-textmagic==2.0.3
-traitlets==4.3.3
-tzdata==2021.5
-tzlocal==4.1
-uvicorn==0.13.1
-webencodings==0.5.1
-Werkzeug==0.16.1
-wincertstore==0.2
-wrapt==1.12.1
-
+numpy==1.18.5
